# BYBE-Portable

./: .env  .gitignore  .gitmodules  LICENSE  Makefile.toml  README.md  io.github.rakuja.bybe.yml  package-lock.json  rust-generated-sources.json
.github/workflows/: release.yml
BYBE-tauri/: .gitignore  Cargo.toml  io.github.rakuja.bybe.desktop  io.github.rakuja.bybe.metainfo.xml  tauri.conf.json
BYBE-tauri/assets/: splash.html
BYBE-tauri/capabilities/: default.json
BYBE-tauri/data/: .env
BYBE-tauri/icons/: icon.icns
BYBE-tauri/src/: lib.rs
