[package]
name = "BYBE-Portable"
version = "2.6.0"
authors = ["RakuJa"]

edition = "2024"
rust-version = "1.85.1"

description = "BYBE - Portable application for Desktop & Mobile"
readme = "../README.md"
homepage = "https://bybe.fly.dev/"
repository = "https://github.com/RakuJa/BYBE"
license = "MIT"
keywords = ["webservice", "pathfinder", "tauri", "desktop"]
publish = false

build = "build.rs"

[lints.rust]
unsafe_code = "forbid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
tauri-plugin-log = "2.3.1"
# Both dialog and updater are used for handling automatic updates
tauri-plugin-updater = { version = "2.6.1", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.2.0"

# debug dependencies
tauri-plugin-devtools = "2.0.0"

anyhow = "1.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

dotenvy = "0.15.7"
bybe = {path = "../BYBE-backend" }

[target.'cfg(windows)'.dependencies]
dunce = { version = "1.0.5"}
