[package]
name = "BYBE-Portable"
version = "4.0.1"
authors = ["RakuJa"]

edition = "2024"
rust-version = "1.88.0"

description = "BYBE - Portable application for Desktop & Mobile"
readme = "../README.md"
homepage = "https://bybe.fly.dev/"
repository = "https://github.com/RakuJa/BYBE"
license = "MIT"
keywords = ["webservice", "pathfinder", "tauri", "desktop"]
publish = false

build = "build.rs"

[lints.rust]
unsafe_code = "forbid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.3", features = [] }

[dev-dependencies]
tauri-cli = "2.9.6"

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.8.0"
# Both dialog and updater are used for handling automatic updates
tauri-plugin-updater = { version = "2.9.0", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.6.0"

# debug dependencies
# tauri-plugin-devtools = "2.0.1"

serde_json = "1.0"

anyhow = "1.0"

log = "0.4"

bybe = {path = "./BYBE-backend" }

[target.'cfg(windows)'.dependencies]
dunce = { version = "1.0.5"}
